EVSRESTAPI-255: generalize sparql to accommodate all terminologies (#145)
* Get to ability to run report.sh

* Get to ability to run reindex.sh

* Fix links in chebi.html

* Overhaul of sparql to allow a lot more optional stuff

* Refactoring of sparql to be more accommodating of missing data

* Going deep!

* Progress on chebi

* Additional work on code/uri stuff and listing remodeled/not used properties

* Handle definition/synonym type codes better and deal with remodeled properties/qualifiers more completely

* Deal with axioms

* More axiom work

* Fix hierarchy handlig and add sampling concepts ,more work on axioms

* More work on axioms

* Report looks good, move to bulk load

* Handle properties.batch with URIs

* More progress, done with GO/CHEBI

* Retest of updated sparql queries for NCIt

* Fix associations code lookup

* Add missing preferredNameCode interpolation

* Fix reindex.sh to always check stale idnexes

* EVSRESTAPI-213: rewire role queries

* More work on tuning roles

* add source to NCIt and fix comment

* Minor query fixes

* Report concept status, definition sources and represent "Retired_Concept" properly as a status in metadata.

* Small cleanup for report

* Add port setting and log the check stale indexes call

* More refinement of sparql queries, plus qa

* Bug fixes from merge

* Add logging to test what's up with not finding chebi terminology on reconciling latest version

* Skip seen terminologies when reconciling latest

* Remove the 4-part clause for role queries as there is not any data

* fix last unionof to remove |

Co-authored-by: bcarlsenca <brian@ciitizen.com>